--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,8 @@
             ],
             "styles": [
               "src/custom-theme.scss",
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/flag-icon-css/css/flag-icons.min.css"
             ],
             "scripts": []
           },
